rendered/nginx/anubis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anubis
  namespace: nginx
spec:
  selector:
    app: anubis
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: metrics
    port: 9090
    targetPort: 9090
  type: ClusterIP
